--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@ addons:
 
 script:
 - cmake CMakeLists.txt
- - cmake --build
-  - ./configure --enable-gcov && make && make check
+ - cmake --build _build --target test -- ARGS=--verbose
 after_success:
 - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
