--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ addons:
       - clang-3.6
 
 script:
-- cmake CMakeLists.txt
-- cmake --build _build --target tests -- ARGS=--verbose
+- cmake --build _build
 after_success:
 - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
