--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ addons:
       - clang-3.6
 
 script:
-- cmake --build
+- cmake --build .
 after_success:
 - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
