--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,58 @@ cmake_minimum_required(VERSION 3.4)
 set(CMAKE_CXX_STANDART 11)
 set(CMAKE_CXX_STANDART_REQUIRED ON)
 
+#FOR GTESTS
+# Download and unpack googletest at configure time
+configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+if(result)
+  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+if(result)
+  message(FATAL_ERROR "Build step for googletest failed: ${result}")
+endif()
+
+# Prevent overriding the parent project's compiler/linker
+# settings on Windows
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# Add googletest directly to our build. This defines
+# the gtest and gtest_main targets.
+add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
+                 ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+                 EXCLUDE_FROM_ALL)
+
+# The gtest/gtest_main targets carry header search path
+# dependencies automatically when using CMake 2.8.11 or
+# later. Otherwise we have to add them here ourselves.
+if (CMAKE_VERSION VERSION_LESS 2.8.11)
+  include_directories("${gtest_SOURCE_DIR}/include")
+endif()
+
+
 project(test)
 
 enable_testing()
-include(${CMAKE_CURRENT_SOURCE_DIR}/third-party/gtest/CMakeLists.txt)
-include(/tests/)
-include(${CMAKE_CURRENT_SOURCE_DIR}/banking/)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third-party/gtest/)
+include_directories(/tests)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/banking)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/third-party/gtest/CMakeLists.txt)
+#include(/tests/)
+#include(${CMAKE_CURRENT_SOURCE_DIR}/banking/)
 
 add_library(banking STATIC ${CMAKE_CURRENT_SOURCE_DIR}/banking/Account.cpp ${CMAKE_CURRENT_SOURCE_DIR}/banking/Transaction.cpp)
 
 add_executable(check tests/banking.cpp)
-target_link_libraries(check banking googletest-distribution)
-#add_test(NAME check COMMAND check)
+target_link_libraries(check gtest_main)
+add_test(NAME ACCOUUNT COMMAND check)
+add_test(NAME TRANSACTION COMMAND check)
 
+# Now simply link against gtest or gtest_main as needed. Eg
+#add_executable(example example.cpp)
+#target_link_libraries(example gtest_main)
+#add_test(NAME example_test COMMAND example)
