--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,6 @@ addons:
 
 script:
 - cmake .
-- cmake --build _build
+- cmake --build build
 after_success:
 - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
