--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ addons:
       - clang-3.6
 
 script:
+- mkdir _build
 - cmake .
-- cmake --build build
+- cmake --build _build
 after_success:
 - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
