--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
 - sudo apt install build-essential
 - sudo apt-get install manpages-dev
 - gcc --version
+- g++ -std=c++11
 
 - mkdir _build
 - cd _build
