--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: cpp
 compiler:
   - gcc
-  - clang
 OS:
   - linux
 
@@ -16,9 +15,9 @@ addons:
       - llvm-toolchain-precise-3.6
     packages:
       - g++-7
-      - clang-3.6
 
 script:
+- ./configure --enable-gcov && make && make check
 - sudo apt update
 - sudo apt install build-essential
 - sudo apt-get install manpages-dev
