--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ OS:
 
 before_install:
   - pip install --user cpp-coveralls
+  
+script:
+- ./configure --enable-gcov && make && make check
 
 addons:
   apt:
@@ -17,7 +20,6 @@ addons:
       - g++-7
 
 script:
-- ./configure --enable-gcov && make && make check
 - sudo apt update
 - sudo apt install build-essential
 - sudo apt-get install manpages-dev
