--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
       - g++-7
 
 script:
-- --enable-gcov
+- which gcov
 - sudo apt update
 - sudo apt install build-essential
 - sudo apt-get install manpages-dev
