--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ addons:
       - g++-7
 
 script:
-- which gcov
+- gcov --enable
+- gcov --help
 - sudo apt update
 - sudo apt install build-essential
 - sudo apt-get install manpages-dev
