--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,10 @@ script:
 - cmake ../
 - cd ..
 - cmake --build _build
+
 after_success:
+- coveralls --verbose
+
+script:
+- coveralls --exclude lib --exclude tests --gcov-options '\-lp'
 - coveralls --verbose
